# homebrew-safe-upgrade

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  brew-safe-install  brew-safe-update  brew-safe-upgrade  dependency_security_check.py  install.sh  pyproject.toml  requirements-dev.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  false_positive.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  gitleaks.yml
tests/: test_brew_safe_deps.py  test_dependency_security_check.py
tests/fixtures/: known_cases.json
tests/fixtures/mock_brew/: brew
